
- QColorDialog::customColor() now returns a QColor value instead of QRgb.
  QColorDialog::setCustomColor() and QColorDialog::setStandardColor() now
  take a QColor value for their second parameter instead of QRgb.

- QPageSetupDialog has had the PageSetupDialogOption enum and the api to
  set and get the enum removed as none of the Options are used any more.

****************************************************************************
*                           General                                        *
****************************************************************************

General Improvements
--------------------

- The directory structure of the qtbase unit-tests has been reworked to
  more closely match the directory structure of the code under test.
  Integration tests have been moved to tests/auto/integrationtests.

- Qt is compiled with C++11 support enabled by default, provided the compiler
  supports C++11. Qmake based projects can enable C++11 support explicitly
  using 'CONFIG+=c++11' in their .pro files. To enable it conditionally, use
  'contains(QT_CONFIG,c++11):CONFIG+=c++11'. This will enable C++11 support
  only if Qt was built with C++11 support.

Third party components
----------------------

- SQLITE_ENABLE_FTS3,SQLITE_ENABLE_FTS3_PARENTHESIS and SQLITE_ENABLE_RTREE
flags are now enabled by default on all platforms, for the sqlite3 copy under
the 3rdparty directory.


****************************************************************************
*                          Library                                         *
****************************************************************************

QtCore
------
* drop a bogus QChar::NoCategory enum value; the proper QChar::Other_NotAssigned
  value is returned for an unassigned codepoints now.

* layoutAboutToBeChanged is no longer emitted by QAbstractItemModel::beginMoveRows.
  layoutChanged is no longer emitted by QAbstractItemModel::endMoveRows. Proxy models