@@ -595,7 +595,6 @@ QT_CLASS_LIB(QAccessibleFactoryInterface, QtWidgets, qaccessibleplugin.h)
 QT_CLASS_LIB(QAccessiblePlugin, QtWidgets, qaccessibleplugin.h)
 QT_CLASS_LIB(QAccessibleWidget, QtWidgets, qaccessiblewidget.h)
 QT_CLASS_LIB(QAccessibleWidgetEx, QtWidgets, qaccessiblewidget.h)
-QT_CLASS_LIB(QAbstractPageSetupDialog, QtWidgets, qabstractpagesetupdialog.h)
 QT_CLASS_LIB(QAbstractPrintDialog, QtWidgets, qabstractprintdialog.h)
 QT_CLASS_LIB(QColorDialog, QtWidgets, qcolordialog.h)
 QT_CLASS_LIB(QDialog, QtWidgets, qdialog.h)
